[gd_scene load_steps=4 format=3 uid="uid://ify8n5m8sqwh"]

[ext_resource type="Script" path="res://scenes/controls/test.gd" id="1_6p6jm"]
[ext_resource type="Script" path="res://scenes/nodes/graph_edit_test.gd" id="1_s4m1c"]
[ext_resource type="PackedScene" uid="uid://dmpvvn1io6hex" path="res://scenes/controls/add_node_button.tscn" id="2_jbatr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6p6jm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BtnSave" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[node name="BtnLoad" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Load"

[node name="BtnClear" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddNodeButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_jbatr")]
layout_mode = 2

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer" node_paths=PackedStringArray("add_node_button")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
minimap_enabled = false
script = ExtResource("1_s4m1c")
add_node_button = NodePath("../HBoxContainer/AddNodeButton")

[connection signal="child_entered_tree" from="VBoxContainer/GraphEdit" to="VBoxContainer/GraphEdit" method="on_child_enter_tree"]
[connection signal="connection_request" from="VBoxContainer/GraphEdit" to="VBoxContainer/GraphEdit" method="_on_connection_request"]
[connection signal="disconnection_request" from="VBoxContainer/GraphEdit" to="VBoxContainer/GraphEdit" method="_on_disconnection_request"]
